# orion-qt

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  orion.pri  orion_spellcheck.pri  orion_svg.pri  orion_testing.pri  orion_tests.pri  resources.qrc
core/: OriArg.h  OriFilter.h  OriFloatingPoint.h  OriResult.h  OriTemplates.h  OriVersion.h
dialogs/: OriBasicConfigDlg.cpp  OriBasicConfigDlg.h  OriConfigDlg.cpp  OriConfigDlg.h
examples/: examples.pro
examples/coder/: README.md  coder.pro  demo.py  main.cpp
examples/colors/: colors.pro  images.qrc  main.cpp
examples/config/: AppConfig.cpp  AppConfig.h  config.pro  main.cpp
examples/help/: app.qrc  help.css  help.pro  main.cpp
examples/help/help/: dev.md  index.md
examples/mru/: MainWindow.h  main.cpp  mru.pro
examples/spellcheck/: README.md  main.cpp  spellcheck.pro
examples/styler/: main.cpp  styler.pro
examples/tests/: README.md  main.cpp  sample_testgroup.cpp  sample_tests.cpp  tests.pro
helpers/: OriDialogs.cpp  OriDialogs.h  OriLayouts.cpp  OriLayouts.h  OriTheme.cpp  OriTheme.h  OriTools.cpp  OriTools.h  OriWidgets.cpp  OriWidgets.h  OriWindows.cpp  OriWindows.h
syntax/: README.md  css.ohl  lua.ohl  ohl.ohl  python.ohl  qss.ohl  sql.ohl
testing/: OriTestBase.cpp  OriTestBase.h  OriTestManager.h  OriTestWindow.cpp  OriTestWindow.h  OriTestWindowTests.cpp  OriTimeMeter.cpp  OriTimeMeter.h  README.md  test.qrc
tests/: ori_test_Filter.cpp  ori_test_Math.cpp  ori_test_Templates.cpp  ori_test_Version.cpp  orion_tests.h
tools/: OriDebug.cpp  OriDebug.h  OriHelpWindow.cpp  OriHelpWindow.h  OriHelpWindow.md  OriHighlighter.cpp  OriHighlighter.h  OriHighlighter.md  OriLog.cpp  OriLog.h  OriLoremIpsum.cpp  OriLoremIpsum.h  OriMessageBus.cpp  OriMessageBus.h  OriMruList.cpp  OriMruList.h  OriPetname.cpp  OriPetname.h  OriSettings.cpp  OriSettings.h  OriSpellcheck.cpp  OriSpellcheck.h  OriSpellcheck.md  OriSpellcheckEngine.cpp  OriSpellcheckEngine.h  OriStyler.cpp  OriStyler.h  OriTranslator.cpp  OriTranslator.h  OriUpdater.cpp  OriUpdater.h  OriWaitCursor.h  README.md
utils/color_mixer/: ColorPreview.cpp  ColorPreview.h  ColorSelector.cpp  ColorSelector.h  MainWindow.cpp  MainWindow.h  PaletteColorSelector.cpp  PaletteColorSelector.h  PredefinedColorSelector.cpp  PredefinedColorSelector.h  SelectColorButton.cpp  SelectColorButton.h  color_mixer.pro
utils/html_adjuster/: MainWindow.h  html_adjuster.pro  main.cpp
utils/ohl_editor/: README.md  main.cpp  ohl_editor.pro
utils/random_colors/: MainWindow.cpp  MainWindow.h  random_colors.pro
utils/unit_tests/: main.cpp  unit_tests.pro
widgets/: OriActions.cpp  OriActions.h  OriBackWidget.cpp  OriBackWidget.h  OriCharMap.cpp  OriCharMap.h  OriCodeEditor.cpp  OriCodeEditor.h  OriCodeEditor.md  OriColorSelectors.cpp  OriColorSelectors.h  OriFlatToolBar.h  OriFlowLayout.cpp  OriFlowLayout.h  OriInfoPanel.cpp  OriInfoPanel.h  OriLabels.cpp  OriLabels.h  OriLangsMenu.cpp  OriLangsMenu.h  OriMdiToolBar.cpp  OriMdiToolBar.h  OriMenuToolButton.cpp  OriMenuToolButton.h  OriMruMenu.cpp  OriMruMenu.h  OriOptionsGroup.cpp  OriOptionsGroup.h  OriPopupButton.cpp  OriPopupButton.h  OriPopupMessage.cpp  OriPopupMessage.h  OriPopupMessage.md  OriSelectableTile.cpp  OriSelectableTile.h  OriStatusBar.cpp  OriStatusBar.h  OriStylesMenu.cpp  OriStylesMenu.h  OriSvgView.cpp  (+6 more)
